--- a/front-end/src/components/Login/Login.css
+++ b/front-end/src/components/Login/Login.css
@@ -1,9 +1,3 @@
-.center{
-  margin-left: 5%;
-  margin-right: 60%;
-  margin-top:10%;
+#login{
+    margin-top:50%;
 }
-.resizebtn{
-  padding: 1% 7.5%;
-}
-
