--- a/front-end/src/components/Login/Login.css
+++ b/front-end/src/components/Login/Login.css
@@ -50,7 +50,7 @@ body {
     color: #ECF0F5;
 }
 
-input[type=password] {
+#password {
     background-color: #1A2226;
     border: none;
     border-bottom: 2px solid #0DB8DE;
